                     Implementa SET CONTROLPH.
                     No início do cultivo, faz leitura do PH da água e, caso PH seja <5 ou >8, considera o sensor como estando com erro e passa a ignorar PH durante o cultivo.
                     Corrige problema de IBC retornando valor inválido para leitura volume (USOM e Laser).
                     Cria um ETL_Macro para os dados de todos os Biorreatores, que não contém as Mensagens, que podem exceder o limite máximo do JSON enviado para o Front. Process_Conn GET passa a usar os diferentes ETL.
                     Status reportado da biofábrica, adicionalmente, testa status de Pint e POut (painel intermediário e de desenvase).
            Front..: Não exibe o valor do PH caso a flag PHControl seja false.
                     Na visualização de BIO e IBC, passa a usar Id= para especificar o equipamento. Desta forma, receberá a ETL que contém mais dados sobre o equipamento.
            _conf..: Muda receitas de 1000 e 2000 para testar PH.
                     Muda CIP BIO para volume de 50L
                     CIP modificado acrescentando 3 ciclos de enxague no fim, assim como no biorreator.

1.2.38  -   Master.: Grow não lia PH caso não tivesse de ajustar o PH, modificado.
20231115             Mudado para o delay na leitura do aferir PH caso não esteja produzindo.
                     Muda lógica de temperatura em get_alldata.
                     Desliga leitura de USOM e LASER nos IBCs. Vários equipamentos estavam sem os sensores e com isto tendo intermitência.
                     Avisa quando não foi possível desligar a resistência.
                     Função get_alldata só liga resistência caso for CIP e bomba e válvulas estiverem ON e não houver erro na biofábrica.
            Network: Muda os timeouts para evitar erro na aferição de PH.
            _conf..: Receita1000 e 2000 mudadas para desligar aerador no teste de PH da água
                     Tempo de CIP de Biorreator atualizado para 200 minutos 